{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 91,
  "lineage": "ee72b7ca-2ad2-43eb-e224-bf5c3b2eaa8a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "my-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:328553603879:loadbalancer/my-elb",
            "availability_zones": [
              "ap-south-1a",
              "ap-south-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-elb-2002431169.ap-south-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "my-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "my-elb",
            "security_groups": [
              "sg-044e49798addb37d8"
            ],
            "source_security_group": "328553603879/elb",
            "source_security_group_id": "sg-044e49798addb37d8",
            "subnets": [
              "subnet-00b9c3a44069c5645",
              "subnet-02facb7ed8dd042d9"
            ],
            "tags": {
              "Name": "my-elb"
            },
            "tags_all": {
              "Name": "my-elb"
            },
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.elb-securitygroup",
            "aws_subnet.cz-public-1",
            "aws_subnet.cz-public-2",
            "aws_vpc.cz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cz-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328553603879:internet-gateway/igw-0ae71f12b9bdac670",
            "id": "igw-0ae71f12b9bdac670",
            "owner_id": "328553603879",
            "tags": {
              "Name": "cz"
            },
            "tags_all": {
              "Name": "cz"
            },
            "vpc_id": "vpc-0041b13f5a93aa2ab"
          },
          "dependencies": [
            "aws_vpc.cz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cz-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328553603879:route-table/rtb-0563729122b0e5719",
            "id": "rtb-0563729122b0e5719",
            "owner_id": "328553603879",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ae71f12b9bdac670",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cz-public-1"
            },
            "tags_all": {
              "Name": "cz-public-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0041b13f5a93aa2ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cz-gw",
            "aws_vpc.cz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cz-public-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da6e872fb7149c97",
            "route_table_id": "rtb-0563729122b0e5719",
            "subnet_id": "subnet-02facb7ed8dd042d9"
          },
          "dependencies": [
            "aws_internet_gateway.cz-gw",
            "aws_route_table.cz-public",
            "aws_subnet.cz-public-1",
            "aws_vpc.cz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cz-public-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed9feeccaec37bfa",
            "route_table_id": "rtb-0563729122b0e5719",
            "subnet_id": "subnet-00b9c3a44069c5645"
          },
          "dependencies": [
            "aws_internet_gateway.cz-gw",
            "aws_route_table.cz-public",
            "aws_subnet.cz-public-2",
            "aws_vpc.cz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328553603879:security-group/sg-044e49798addb37d8",
            "description": "security group for load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044e49798addb37d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb",
            "name_prefix": "",
            "owner_id": "328553603879",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elb"
            },
            "tags_all": {
              "Name": "elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0041b13f5a93aa2ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cz"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328553603879:security-group/sg-07cf3cd2397604a88",
            "description": "security group for my instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07cf3cd2397604a88",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-044e49798addb37d8"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "myinstance",
            "name_prefix": "",
            "owner_id": "328553603879",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myinstance"
            },
            "tags_all": {
              "Name": "myinstance"
            },
            "timeouts": null,
            "vpc_id": "vpc-0041b13f5a93aa2ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb-securitygroup",
            "aws_vpc.cz"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cz-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328553603879:subnet/subnet-08461e1a2aae14804",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08461e1a2aae14804",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "328553603879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cz-private-1"
            },
            "tags_all": {
              "Name": "cz-private-1"
            },
            "vpc_id": "vpc-0041b13f5a93aa2ab"
          },
          "dependencies": [
            "aws_vpc.cz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cz-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328553603879:subnet/subnet-0f0e07acce8d20731",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0e07acce8d20731",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "328553603879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cz-private-2"
            },
            "tags_all": {
              "Name": "cz-private-2"
            },
            "vpc_id": "vpc-0041b13f5a93aa2ab"
          },
          "dependencies": [
            "aws_vpc.cz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cz-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328553603879:subnet/subnet-02facb7ed8dd042d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02facb7ed8dd042d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "328553603879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cz-public-1"
            },
            "tags_all": {
              "Name": "cz-public-1"
            },
            "vpc_id": "vpc-0041b13f5a93aa2ab"
          },
          "dependencies": [
            "aws_vpc.cz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cz-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328553603879:subnet/subnet-00b9c3a44069c5645",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b9c3a44069c5645",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "328553603879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cz-public-2"
            },
            "tags_all": {
              "Name": "cz-public-2"
            },
            "vpc_id": "vpc-0041b13f5a93aa2ab"
          },
          "dependencies": [
            "aws_vpc.cz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cz",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:328553603879:vpc/vpc-0041b13f5a93aa2ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-072c1c2b661ec16a2",
            "default_route_table_id": "rtb-050d86aeabbcc00b7",
            "default_security_group_id": "sg-0d67d33b1bcd85fe1",
            "dhcp_options_id": "dopt-0e1e30a3e1b9c91f6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0041b13f5a93aa2ab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-050d86aeabbcc00b7",
            "owner_id": "328553603879",
            "tags": {
              "Name": "cz"
            },
            "tags_all": {
              "Name": "cz"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}